Вносит правки от Ники

--- a/app/sass/_global.sass
+++ b/app/sass/_global.sass
@@ -54,6 +54,7 @@ section
       display: flex
       flex-direction: column
       gap: 20px
+      overflow: auto
     & .partner-cabinet__service-item
       margin-bottom: 0
       background: transparent
@@ -68,9 +69,9 @@ section
         width: 100%
         align-items: center
         @media (max-width: 1430px)
-            gap: 13px
+          gap: 13px
         @media (max-width: 1275px)
-            gap: 12px  
+          gap: 12px
       &:nth-of-type(2n)
         background: rgba(255, 255, 255, 0.07)
       .sim
