--- a/app/sass/partners-worker-cabinet.sass
+++ b/app/sass/partners-worker-cabinet.sass
@@ -329,9 +329,10 @@
 
 .partners-worker-cabinet__service-table
     @media (max-width: 1000px)
-        overflow-x: scroll
+        overflow: scroll
     &::-webkit-scrollbar
         height: 8px
+        width: 8px
         background-color: #f9f9fd
     &::-webkit-scrollbar-thumb
         background-color: #223c50
