--- a/app/sass/footer.sass
+++ b/app/sass/footer.sass
@@ -6,7 +6,7 @@
   background-position: bottom
   @include tablet
     padding-top: 80px
-    padding-bottom: 271px
+    padding-bottom: 100px
     background-repeat: no-repeat
 
   &__form
@@ -44,6 +44,7 @@
     &--right
       @include tablet
         width: 100%
+        text-align: center
         @include mobile
           background: transparent
       button
@@ -145,6 +146,5 @@
 
   &__copyright
     text-align: center
-    @include p3
-    @include tablet
-      display: none
+    @media(max-width: 1200px)
+      margin-top: 60px
