Вносит мелкие адаптивные правки

--- a/app/sass/_home.sass
+++ b/app/sass/_home.sass
@@ -247,7 +247,7 @@ html
     @include tablet
       margin-top: 10px
       max-height: 55vh
-      padding-right: 0
+      padding-right: 0 !important
     @include tabletL
       padding-right: 50px
     @include mobile
@@ -918,6 +918,6 @@ body>span.select2-container.select2-container--default.select2-container--open.o
     bottom: 75px
   & .side-menu__link
     animation: none
-    font-size: 18px !important
+    font-size: 16px !important
   & .side-menu__list
-    gap: 40px !important
+    gap: 30px !important
