--- a/app/sass/text-page.sass
+++ b/app/sass/text-page.sass
@@ -217,8 +217,16 @@
             margin-bottom: 9vw
     @media(max-width: 500px)
         display: flex !important
-        gap: 15px
+        gap: 20px
         flex-direction: column
+        &--2
+            margin-bottom: 16.625vw
+        &--1-2
+            margin-bottom: 13.75vw
+        &--3
+            margin-bottom: 13.75vw
+        &--lists
+            margin-bottom: 2vw
 
 .text-page__row-title
     font-family: 'Kharkiv Tone'
