Добавляет правк по отступам и шрифтам

--- a/app/sass/_home.sass
+++ b/app/sass/_home.sass
@@ -609,6 +609,7 @@ body>span.select2-container.select2-container--default.select2-container--open.o
 
     p
       @include p0
+      font-family: 'Montserrat', sans-serif
       margin-bottom: 40px
       transition-delay: .2s
       color: #FFFFFF
