--- a/app/sass/activation-steps.sass
+++ b/app/sass/activation-steps.sass
@@ -186,7 +186,7 @@
         margin-bottom: 37px
     &--litle
         z-index: 1
-        font-family: 'Poppins' !important
+        font-family: 'Montserrat' !important
         font-style: normal
         font-weight: 400
         font-size: 1.1vw
