Правки по шрифту и футеру

--- a/app/sass/text-page.sass
+++ b/app/sass/text-page.sass
@@ -2,6 +2,9 @@
     & .footer
         @media(max-width: 1200px)
             padding: 10px 0 30px
+        @media(max-width: 800px)
+            background-position-y: -50px
+            background-size: 690px
 
 .text-page__header
     background: none
@@ -272,7 +275,8 @@
             @media(max-width: 815px)
                 font-size: 1.45vw
             @media(max-width: 500px)
-                font-size: 13px
+                top: 2px
+                font-size: 14px
                 left: -18px
 
 .text-page__unnumber-list
@@ -288,8 +292,9 @@
             top: 20%
             @media(max-width: 500px)
                 left: -14px
-                width: 0.9vw
-                height: 0.9vw
+                top: 10px
+                width: 1.3vw
+                height: 1.3vw
 .side-article
     grid-area: side-article
 
@@ -305,4 +310,4 @@
     @media(max-width: 815px)
         font-size: 1.1vw
     @media(max-width: 500px)
-        font-size: 12px
+        font-size: 13px
